--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/jrr564/js-hangman#readme",
   "dependencies": {
+    "colors": "^1.1.2",
     "inquirer": "^5.0.1",
     "node": "^9.4.0",
     "prompt": "^1.0.0"
